# create2crunch

./: .gitmodules  Cargo.toml  Dockerfile
UniswapV4DeployerCompetition/: foundry.toml  remappings.txt
src/: lib.rs  main.rs  score_address.rs
src/kernels/: keccak256.cl
