[package]
name = "fourfourfourfour"
version = "0.3.0"
authors = ["0age <0age@protonmail.com"]
edition = "2021"
rust-version = "1.65"

[dependencies]
alloy-primitives = { version = "0.5", features = ["rand"] }
byteorder = "1.5"
console = "0.15"
fs4 = "0.7"
ocl = "0.19"
rand = "0.8"
rayon = "1.0"
reqwest = {version = "0.12.9", features = ["blocking", "json"]}
rustc-hash = "1.1"
separator = "0.4.1"
serde_json = "1.0.132"
terminal_size = "0.3.0"
tiny-keccak = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1

[features]
default = []
asm = ["alloy-primitives/asm-keccak"]

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
